<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/prompt_title"
        android:textColor="#FF00FF"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/dice"
        android:textSize="25sp"
        />

    <ImageButton
        android:id="@+id/imgDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/dice01"/>


    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txtTitle"
        android:layout_below="@id/imgDice"
        android:layout_marginBottom="20dp"
        android:text="@string/result"
        android:textColor="#0000FF"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnShowResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txtTitle"
        android:layout_below="@id/txtResult"
        android:text="@string/btn_show_result1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnShowResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/txtTitle"
        android:layout_below="@id/txtResult"
        android:text="@string/btn_show_result2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHiddenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnShowResult1"
        android:layout_centerInParent="true"
        android:text="@string/btn_hidden_result"
        android:textSize="18sp" />

</RelativeLayout>
