<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="com.example.admin.hw6.GameResultFragment2">

    <TableRow>

        <TextView
            android:text="@string/total_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCountSet"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/player_win_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCountPlayerWin"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/computer_win_set"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCountComWin"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/draw"
            android:textColor="#0FFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCountDraw"
            android:layout_weight="1"
            android:focusable="false" />
    </TableRow>

</TableLayout>
